# kitbash

./: .gitignore  CHANGELOG.md  Cargo.toml  PR_DESCRIPTION.md  README.md  README_zh-CN.md  README_zh-Hans.md  clippy.toml  deny.toml  index.html  justfile  tokei_check.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml  pages.yml  release-plz.yml  update-deps.yml
.kitbash/: settings.toml
src/: app.rs  config.rs  font.rs  imaging.rs  main.rs  node.rs  plugin.rs  theme.rs  ui.rs
src/imaging/: canvas.rs  export.rs
src/node/: builtin.rs  executor.rs  graph.rs  scheduler.rs  types.rs
src/plugin/: abi.rs  loader.rs  runtime.rs
src/theme/: colors.rs
src/ui/: canvas_panel.rs  console_panel.rs  dock.rs  inspector_panel.rs  layer_panel.rs  menu_bar.rs  node_graph_panel.rs  settings_panel.rs
